Website: Release notes for geometry.
[SVN r75107]

--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -127,6 +127,208 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/geometry">Geometry</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Bugfixes:
+                <ul>
+                  <li>
+                    <div>
+                      Robustness issue, in some circumstances the union failed to
+                      output. Fixed.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Robustness issue, in some circumstances the calculated intersection
+                      point was outside the segment. Fixed.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Concept issue, cartesian intersect didn't understand segments
+                      other than the provided one. Fixed.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Sometimes self-intersections in linestrings were missed. Fixed.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      The fusion coordinate system was not registered correctly.
+                      Fixed.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Solved tickets:
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/5726">#5726</a>
+                      (Segment intersection algorithm still assumes 'first', 'second'
+                      members)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/5744">#5744</a>
+                      (mistake fusion adapt example)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/5748">#5748</a>
+                      (need include &lt;boost/foreach.hpp&gt;)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/5954">#5954</a>
+                      (distance_pythagoras skips sqrt() step)
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Improvements on algorithms:
+                <ul>
+                  <li>
+                    <div>
+                      Checking self-intersections is now not done automatically,
+                      this can blast performance.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Besides that, checking self-intersections is made faster.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Intersections now avoid outputting duplicate points. So they
+                      output the minimal set.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Additional algorithms:
+                <ul>
+                  <li>
+                    <div>
+                      covered_by: within is defined as &quot;within, not on boundary&quot;.
+                      covered_by is &quot;within or on boundary&quot;
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Additional functionality:
+                <ul>
+                  <li>
+                    <div>
+                      within: strategies can now be specified for within&lt;point,
+                      box&gt; and within&lt;box, box&gt;
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      convert: a much broader range of conversions is supported
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      assign: idem, (currently partly) synonym for convert (but reversed
+                      arguments)
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Additional coordinate types:
+                <ul>
+                  <li>
+                    <div>
+                      Basic support for Boost.Rational
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/interprocess/index.html">Interprocess</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/2796">#2796</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/4031">#4031</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/4251">#4251</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/4452">#4452</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/4895">#4895</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5077">#5077</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5120">#5120</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5123">#5123</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5230">#5230</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5197">#5197</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5287">#5287</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5294">#5294</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5306">#5306</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5308">#5308</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5392">#5392</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5409">#5409</a>,
+              </div>
+            </li>
+            <li>
+              <div>
+                Added support to customize offset_ptr and allow creating custom managed
+                segments that might be shared between 32 and 64 bit processes.
+              </div>
+            </li>
+            <li>
+              <div>
+                Shared memory in windows has again filesystem lifetime: kernel bootstamp
+                and WMI use to get a reliable timestamp was causing a lot of trouble.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/intrusive/index.html">Intrusive</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/4797">#4797</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5165">#5165</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5183">#5183</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5191">#5191</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
           <ul>
             <li>
