Website: Release notes for graph.
[SVN r75122]

--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -275,6 +275,32 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/graph/">Graph</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/5185">#5185</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5506">#5506</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5813">#5813</a>
+                and <a href="https://svn.boost.org/trac/boost/ticket/5919">#5919</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Various other bug fixes not in Trac.
+              </div>
+            </li>
+            <li>
+              <div>
+                Changed edge_descriptor type for reverse_graph to a new data type
+                to avoid ambiguities with the edge_descriptor of the underlying graph.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/interprocess/index.html">Interprocess</a>:</span>
           <ul>
             <li>
