Website: Display beta docs.
[SVN r75127]

--- a/common/menu-doc.html
+++ b/common/menu-doc.html
@@ -9,6 +9,9 @@
       <a href="/doc/libs">Libraries <span class="link">&gt;</span></a>
 
       <ul>
+        <li><a href="/doc/libs/1_48_0_beta1/" rel="nofollow">1.48.0 - Beta
+        Release <span class="link">&gt;</span></a></li>
+
         <li><a href="/doc/libs/1_47_0/" rel="nofollow">1.47.0 - Current
         Release <span class="link">&gt;</span></a></li>
 
