Website: Fix a couple of issues with new libraries.
[SVN r75128]

--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -66,7 +66,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/move/index.html">Move</a>:</span>
+          <span class="library"><a href="/doc/html/move.html">Move</a>:</span>
   Portable move semantics
           for C++03 and C++11 compilers, from Ion Gaztañaga.
         </div>
