--- a/index.html
+++ b/index.html
@@ -93,14 +93,13 @@ http://www.boost.org/development/website_updating.html
                 <div class="directory-item" id="important-downloads">
                   <h2>Downloads</h2>
 
-                  <ul id="downloads">
-                    
-                    <li><span class=
-                    "news-title"><a href="http://sourceforge.net/projects/boost/files/boost/1.47.0/">Version 1.47.0</a>                    (<a href="/users/history/version_1_47_0.html">release notes</a>)
-                    </span>
-                    <span class=
-                    "news-date">July 11th, 2011 18:19 GMT</span></li>
-                  </ul>
+<h3>Current Release</h3>
+<ul id="downloads">
+<li><span class="news-title"><a href="http://sourceforge.net/projects/boost/files/boost/1.47.0/">Version 1.47.0</a> (<a href="/users/history/version_1_47_0.html">release notes</a>)</span><span class="news-date">July 11th, 2011 18:19 GMT</span></li>
+</ul><h3>Beta Release</h3>
+<ul id="downloads">
+<li><span class="news-title">Version 1.48.0 (<a href="/users/history/version_1_48_0.html">release notes</a>)</span><span class="news-date">In Progress</span></li>
+</ul>
 
                   <p><a href="/users/download/">More Downloads...</a>
                   (<a href="feed/downloads.rss">RSS</a>)</p>
