--- a/users/download/index.html
+++ b/users/download/index.html
@@ -27,15 +27,14 @@
 
             <div class="section-body">
               <ul class="toc">
-                <li><a href="#releases">Packaged Releases</a></li>
+<li><a href="#live">Current Release</li>
+<li><a href="#beta">Beta Release</li>
 
                 <li><a href="#history">Old Boost Releases</a></li>
 
                 <li><a href="#repository">Subversion Repository</a></li>
               </ul>
-
-              <h2><a name="releases" id="releases"></a>Packaged
-              Releases</h2>
+<h2 id="live">Current Release</h2>
               <h3><span class=
               "news-title">Version 1.47.0</span></h3>
 
@@ -55,7 +54,23 @@
 
                 <li>
                 <a href="http://sourceforge.net/projects/boost/files/boost/1.47.0/">Download</a></li>
+              </ul><h2 id="beta">Beta Release</h2>
+              <h3><span class=
+              "news-title">Version 1.48.0</span></h3>
+
+              <p class="news-date">In Progress</p>
+
+              <p class="news-description">
+              <span class="brief"><span class="purpose">
+      New Libraries: Container, Locale, Move. Updated Libraries:
+    </span></span></p>
+
+              <ul class="menu">
+                <li>
+                <a href="/users/history/version_1_48_0.html">Details</a></li>
+
               </ul>
+
               <h2><a name="history" id="history"></a>Old Boost Releases</h2>
 
               <p>Old versions of boost can be found on the <a href=
