Website: Link to beta download.
[SVN r75148]

--- a/users/download/index.html
+++ b/users/download/index.html
@@ -69,6 +69,8 @@
                 <li>
                 <a href="/users/history/version_1_48_0.html">Details</a></li>
 
+                <li>
+                <a href="http://sourceforge.net/projects/boost/files/boost/1.48.0.beta.1/">Download</a></li>
               </ul>
 
               <h2><a name="history" id="history"></a>Old Boost Releases</h2>
