--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -42,9 +42,10 @@
               <p><span class=
               "news-date">In Progress</span></p>
 
-              
+              <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0.beta.1/">Download this release.</a></span></p>
               <div class="news-description">
                 <div class="description">
+  
   
   
   <div id="version_1_48_0.new_libraries">
