Website: rebuild site.
[SVN r75295]

--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -128,6 +128,42 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/config/index.html">Config</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Add <code><span class="identifier">BOOST_NO_DECLTYPE_N3276</span></code>
+                config macro. (See <a href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2011/n3276.pdf">N3276</a>.)
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/fusion/index.html">Fusion</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Make <code><span class="identifier">single_view</span></code>
+                a random access fusion sequence.
+              </div>
+            </li>
+            <li>
+              <div>
+                Remove bogus compile-time asserts from <code><span class="identifier">fusion</span><span class="special">::</span><span class="identifier">distance</span></code>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Cleaner implementation of segmented Fusion.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/geometry">Geometry</a>:</span>
           <ul>
             <li>
@@ -539,6 +575,40 @@
               <div>
                 Added numeric_cast_traits; see '<a href="/doc/libs/1_48_0/libs/numeric/conversion/doc/html/boost_numericconversion/type_requirements_and_user_defined_types_support.html#boost_numericconversion.type_requirements_and_user_defined_types_support.udts_with_numeric_cast">numeric_cast_traits</a>'
                 for details.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/proto/index.html">Proto</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>Breaking Change:</em> Reduce numbers
+                of operator overloads by using rvalue references on compilers that
+                support them. Any user code that defines additional operator overloads
+                on Proto expressions could potentially be rendered ambiguous by this
+                change. The solution is to use a grammar to disable Proto's operators
+                that are made ambiguous by any user-defined operators.
+              </div>
+            </li>
+            <li>
+              <div>
+                Move definitions of Proto tag types into an ADL-blocking namespace.
+              </div>
+            </li>
+            <li>
+              <div>
+                Add second template parameter to <code><span class="identifier">proto</span><span class="special">::</span><span class="identifier">siwtch_</span></code>
+                to control dispatching to cases.
+              </div>
+            </li>
+            <li>
+              <div>
+                Allow dependent domains to be specified with <code><span class="identifier">BOOST_PROTO_EXTENDS</span></code>
+                and <code><span class="identifier">BOOST_PROTO_BASIC_EXTENDS</span></code>.
               </div>
             </li>
           </ul>
