Website: Fix the timezone handling for parsing dates.
[SVN r75337]

--- a/users/history/old_versions.html
+++ b/users/history/old_versions.html
@@ -130,7 +130,7 @@
       the <a href="/libs/utility/index.html">utility</a> library.
     </p>
   </div>
-  <div id="old_versions.1_sep_1999">
+  <div id="old_versions.1_sep_1999_0">
     <h3><span class="link">1 Sep 1999</span></h3>
     <p>
       The category &quot;Experimental&quot; has been added to the <a href="/libs/libraries.htm">library</a>
