--- a/users/history/version_1_32_0.html
+++ b/users/history/version_1_32_0.html
@@ -142,115 +142,113 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_32_0/libs/graph/index.html">Graph</a>:</span> 
-
+          <span class="library"><a href="/doc/libs/1_32_0/libs/graph/index.html">Graph</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added <a href="/doc/libs/1_32_0/libs/graph/doc/bundles.html">bundled
+                properties</a> to the <a href="/doc/libs/1_32_0/libs/graph/doc/adjacency_list.html"><code><span class="identifier">adjacency_list</span></code></a> and <a href="/doc/libs/1_32_0/libs/graph/doc/adjacency_matrix.html"><code><span class="identifier">adjacency_matrix</span></code></a> class
+                templates, greatly simplifying the introduction of internal vertex
+                and edge properties.
+              </div>
+            </li>
+            <li>
+              <div>
+                The <a href="/doc/libs/1_32_0/libs/graph/doc/leda_conversion.html">LEDA
+                graph adaptors</a> have been ported to LEDA 4.5.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added algorithms for <a href="/doc/libs/1_32_0/libs/graph/doc/betweenness_centrality.html">betweenness
+                centrality</a> and <a href="/doc/libs/1_32_0/libs/graph/doc/bc_clustering.html">betweenness
+                centrality clustering</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added <a href="/doc/libs/1_32_0/libs/graph/doc/circle_layout.html">circle
+                layout</a> and <a href="/doc/libs/1_32_0/libs/graph/doc/kamada_kawai_spring_layout.html">undirected
+                spring layout</a> algorithms.
+              </div>
+            </li>
+          </ul>
         </div>
-        <ul>
-          <li>
-            <div>
-              Added <a href="/doc/libs/1_32_0/libs/graph/doc/bundles.html">bundled
-              properties</a> to the <a href="/doc/libs/1_32_0/libs/graph/doc/adjacency_list.html"><code><span class="identifier">adjacency_list</span></code></a> and <a href="/doc/libs/1_32_0/libs/graph/doc/adjacency_matrix.html"><code><span class="identifier">adjacency_matrix</span></code></a> class templates,
-              greatly simplifying the introduction of internal vertex and edge properties.
-            </div>
-          </li>
-          <li>
-            <div>
-              The <a href="/doc/libs/1_32_0/libs/graph/doc/leda_conversion.html">LEDA
-              graph adaptors</a> have been ported to LEDA 4.5.
-            </div>
-          </li>
-          <li>
-            <div>
-              Added algorithms for <a href="/doc/libs/1_32_0/libs/graph/doc/betweenness_centrality.html">betweenness
-              centrality</a> and <a href="/doc/libs/1_32_0/libs/graph/doc/bc_clustering.html">betweenness
-              centrality clustering</a>.
-            </div>
-          </li>
-          <li>
-            <div>
-              Added <a href="/doc/libs/1_32_0/libs/graph/doc/circle_layout.html">circle
-              layout</a> and <a href="/doc/libs/1_32_0/libs/graph/doc/kamada_kawai_spring_layout.html">undirected
-              spring layout</a> algorithms.
-            </div>
-          </li>
-        </ul>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_32_0/libs/mpl/doc/index.html">MPL Library</a>:</span> 
-
+          <span class="library"><a href="/doc/libs/1_32_0/libs/mpl/doc/index.html">MPL Library</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Updated to use the Boost Software License.
+              </div>
+            </li>
+            <li>
+              <div>
+                New <a href="/doc/libs/1_32_0/libs/mpl/doc/index.html">documentation</a>,
+                including a complete <a href="/doc/libs/1_32_0/libs/mpl/doc/refmanual.html">reference
+                manual.</a>
+              </div>
+            </li>
+            <li>
+              <div>
+                Major interface changes and improvements, many of which are not backward
+                compatible. Please refer to the <a href="/doc/libs/1_32_0/libs/mpl/doc/tutorial/changes-in-boost-1-32-0.html">1.32
+                changelog</a> for the detailed information about upgrading to
+                the new version.
+              </div>
+            </li>
+          </ul>
         </div>
-        <ul>
-          <li>
-            <div>
-              Updated to use the Boost Software License.
-            </div>
-          </li>
-          <li>
-            <div>
-              New <a href="/doc/libs/1_32_0/libs/mpl/doc/index.html">documentation</a>,
-              including a complete <a href="/doc/libs/1_32_0/libs/mpl/doc/refmanual.html">reference
-              manual.</a>
-            </div>
-          </li>
-          <li>
-            <div>
-              Major interface changes and improvements, many of which are not backward
-              compatible. Please refer to the <a href="/doc/libs/1_32_0/libs/mpl/doc/tutorial/changes-in-boost-1-32-0.html">1.32
-              changelog</a> for the detailed information about upgrading to the
-              new version.
-            </div>
-          </li>
-        </ul>
       </li>
       <li>
         <div>
           <span class="library"><a href="/doc/libs/1_32_0/libs/python/doc/index.html">Python
-          Library</a>:</span> 
-
+          Library</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Updated to use the Boost Software License.
+              </div>
+            </li>
+            <li>
+              <div>
+                a new, <a href="/doc/libs/1_32_0/libs/python/doc/tutorial/doc/html/python/exposing.html#python.class_virtual_functions">better
+                method of wrapping classes with virtual functions</a> has been
+                implemented.
+              </div>
+            </li>
+            <li>
+              <div>
+                Support for the new Python Bool type, thanks to Daniel Holth.
+              </div>
+            </li>
+            <li>
+              <div>
+                Support for upcoming GCC symbol export control features have been
+                folded in, thanks to Niall Douglas.
+              </div>
+            </li>
+            <li>
+              <div>
+                Improved support for <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">auto_ptr</span></code>-like
+                types.
+              </div>
+            </li>
+            <li>
+              <div>
+                Components used by other libraries have been moved out of <tt>python/detail</tt>
+                and into <tt>boost/detail</tt> to improve dependency relationships.
+              </div>
+            </li>
+            <li>
+              <div>
+                Miscellaneous bug fixes and compiler workarounds.
+              </div>
+            </li>
+          </ul>
         </div>
-        <ul>
-          <li>
-            <div>
-              Updated to use the Boost Software License.
-            </div>
-          </li>
-          <li>
-            <div>
-              a new, <a href="/doc/libs/1_32_0/libs/python/doc/tutorial/doc/html/python/exposing.html#python.class_virtual_functions">better
-              method of wrapping classes with virtual functions</a> has been
-              implemented.
-            </div>
-          </li>
-          <li>
-            <div>
-              Support for the new Python Bool type, thanks to Daniel Holth.
-            </div>
-          </li>
-          <li>
-            <div>
-              Support for upcoming GCC symbol export control features have been folded
-              in, thanks to Niall Douglas.
-            </div>
-          </li>
-          <li>
-            <div>
-              Improved support for <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">auto_ptr</span></code>-like
-              types.
-            </div>
-          </li>
-          <li>
-            <div>
-              Components used by other libraries have been moved out of <tt>python/detail</tt>
-              and into <tt>boost/detail</tt> to improve dependency relationships.
-            </div>
-          </li>
-          <li>
-            <div>
-              Miscellaneous bug fixes and compiler workarounds.
-            </div>
-          </li>
-        </ul>
       </li>
       <li>
         <div>
@@ -280,7 +278,6 @@
     For complete list of changes see Test Library
     <a href="/doc/libs/1_32_0/libs/test/doc/release_notes.html#v1_32_0">release notes</a>.
   </p>
-
         </div>
       </li>
     </ul>
