--- a/users/history/version_1_18_0.html
+++ b/users/history/version_1_18_0.html
@@ -40,7 +40,7 @@
               "news-title">Version 1.18.0</span></h2>
 
               <p><span class=
-              "news-date">September 28th, 2000 11:00 GMT</span></p>
+              "news-date">September 28th, 2000 12:00 GMT</span></p>
 
               
               <div class="news-description">
@@ -51,60 +51,60 @@
     <li>
       <div>
         Preliminary release of two important new libraries:
+        <ul>
+          <li>
+            <div>
+              <span class="library"><a href="/libs/graph/doc/table_of_contents.html">Graph Library</a></span> -
+              Generic graph components and algorithms from Jeremy Siek and a University
+              of Notre Dame team.
+            </div>
+          </li>
+          <li>
+            <div>
+              <span class="library"><a href="/libs/regex/index.html">Regular Expression Library</a></span> -
+              Text pattern matching in all its glory from John Maddock.
+            </div>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li>
-          <div>
-            <span class="library"><a href="/libs/graph/doc/table_of_contents.html">Graph Library</a></span> -
-            Generic graph components and algorithms from Jeremy Siek and a University
-            of Notre Dame team.
-          </div>
-        </li>
-        <li>
-          <div>
-            <span class="library"><a href="/libs/regex/index.html">Regular Expression Library</a></span> -
-            Text pattern matching in all its glory from John Maddock.
-          </div>
-        </li>
-      </ul>
     </li>
     <li>
       <div>
         Other changes:
+        <ul>
+          <li>
+            <div>
+              <span class="library"><a href="/libs/array/index.html">Array Library</a></span> improvements
+              reflecting formal review comments.
+            </div>
+          </li>
+          <li>
+            <div>
+              <a href="/boost/functional.hpp">functional.hpp</a> compiler
+              workarounds added.
+            </div>
+          </li>
+          <li>
+            <div>
+              <code><span class="identifier">tie</span><span class="special">()</span>
+              <span class="identifier">function</span> <span class="keyword">template</span></code>
+              added to utility.hpp for easier handling of std::pair&lt;&gt; return
+              values.
+            </div>
+          </li>
+          <li>
+            <div>
+              <span class="library"><a href="/libs/integer/index.html">Integer Library</a></span> improved
+              handling of 64-bit integers.
+            </div>
+          </li>
+          <li>
+            <div>
+              Minor web site page updates.
+            </div>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li>
-          <div>
-            <span class="library"><a href="/libs/array/index.html">Array Library</a></span> improvements
-            reflecting formal review comments.
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="/boost/functional.hpp">functional.hpp</a> compiler workarounds
-            added.
-          </div>
-        </li>
-        <li>
-          <div>
-            <code><span class="identifier">tie</span><span class="special">()</span>
-            <span class="identifier">function</span> <span class="keyword">template</span></code>
-            added to utility.hpp for easier handling of std::pair&lt;&gt; return
-            values.
-          </div>
-        </li>
-        <li>
-          <div>
-            <span class="library"><a href="/libs/integer/index.html">Integer Library</a></span> improved
-            handling of 64-bit integers.
-          </div>
-        </li>
-        <li>
-          <div>
-            Minor web site page updates.
-          </div>
-        </li>
-      </ul>
     </li>
   </ul>
 </div>              </div>
