Website: Fix link.
[SVN r75375]

--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -120,7 +120,7 @@
             </li>
             <li>
               <div>
-                See the <a href="/libs/chrono/appendices/history.html">History</a>
+                See the <a href="/doc/html/chrono/appendices.html#chrono.appendices.history">History</a>
                 for more details.
               </div>
             </li>
