--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Beta release: Version 1.48.0</title>
+  <title>Version 1.48.0 beta release</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -32,7 +32,7 @@
         <div class="section" id="intro">
           <div class="section-0">
             <div class="section-title">
-              <h1>Beta release: Version 1.48.0</h1>
+              <h1>Version 1.48.0 beta release</h1>
             </div>
 
             <div class="section-body">
@@ -42,7 +42,7 @@
               <p><span class=
               "news-date">In Progress</span></p>
 
-              <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0.beta.1/">Download this release.</a></span></p>
+              <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0.beta.1/">Download this beta release.</a></span></p>
               <div class="news-description">
                 <div class="description">
   
