Endian has been conditionally accepted.
[SVN r75388]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -276,8 +276,8 @@ http://www.boost.org/development/website_updating.html
 
 		    <td>
         	      <a href=
-		     "http://lists.boost.org/boost-announce/2011/09/0332.php">
-			Pending</a>
+		     "http://lists.boost.org/boost-announce/2011/11/0336.php">
+			Conditionally Accepted</a>
 		    </td>
                   </tr>
 
