Atomic has been accepted.
[SVN r75409]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -243,8 +243,8 @@ http://www.boost.org/development/website_updating.html
                     <td>October 17, 2011 - October 26, 2011</td>
 		    <td>
         	      <a href=
-		     "http://lists.boost.org/boost-announce/2011/10/0334.php">
-			Ongoing</a>
+		     "http://lists.boost.org/boost-announce/2011/11/0337.php">
+			Accepted</a>
 		    </td>
                   </tr>
 
