--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -159,19 +159,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <td>Local</td>
-
-                    <td>Lorenzo Caminiti</td>
-
-                    <td>
-		      <a href="http://svn.boost.org/svn/boost/sandbox/local/">Boost Sandbox</a></td>
-
-                    <td>Jeffrey Hellrung</td>
-
-                    <td>November 10, 2011 - November 19, 2011</td>
-                  </tr>
-
-                  <tr>
                     <td>Singularity</td>
 
                     <td>Ben Robinson</td>
@@ -204,6 +191,22 @@ http://www.boost.org/development/website_updating.html
                     <th>Result</th>
                   </tr>
                 </thead>
+
+                  <tr>
+                    <td>Local</td>
+
+                    <td>Lorenzo Caminiti</td>
+
+                    <td>Jeffrey Hellrung</td>
+
+                    <td>November 10, 2011 - November 19, 2011</td>
+
+		    <td>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/11/0338.php">
+			Ongoing</a>
+		    </td>
+                  </tr>
 
                   <tr>
                     <td>Atomic</td>
