--- a/users/download/index.html
+++ b/users/download/index.html
@@ -62,7 +62,7 @@
 
               <p class="news-description">
               <span class="brief"><span class="purpose">
-      New Libraries: Container, Locale, Move. Updated Libraries: Chrono, Config,
+      New Libraries: Container, Locale, Move. Updated Libraries: Asio, Chrono, Config,
       Fusion, Geometry, Graph, Interprocess, Intrusive, Lexical cast, Math, MSM,
       Numeric Conversion, Proto, Regex, Spirit, TypeTraits, Unordered, Wave
     </span></span></p>
