--- a/users/history/version_1_32_0.html
+++ b/users/history/version_1_32_0.html
@@ -41,7 +41,7 @@
 
               <p><span class=
               "news-date">November 19th, 2004 12:00 GMT</span></p>
-
+<p><a href="/doc/libs/1_32_1/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.tar.bz2/download">boost_1_32_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.tar.gz/download">boost_1_32_0.tar.gz</a></td></tr>
 <tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.exe/download">boost_1_32_0.exe</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.32.0/boost_1_32_0.zip/download">boost_1_32_0.zip</a></td></tr></table>
