--- a/users/history/version_1_33_1.html
+++ b/users/history/version_1_33_1.html
@@ -41,7 +41,7 @@
 
               <p><span class=
               "news-date">December  5th, 2006 12:00 GMT</span></p>
-
+<p><a href="/doc/libs/1_33_1/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.tar.bz2/download">boost_1_33_1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.tar.gz/download">boost_1_33_1.tar.gz</a></td></tr>
 <tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.exe/download">boost_1_33_1.exe</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.zip/download">boost_1_33_1.zip</a></td></tr></table>
