--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -41,7 +41,7 @@
 
               <p><span class=
               "news-date">In Progress</span></p>
-
+<p><a href="/doc/libs/1_48_0_beta1/">Documentation</a>
               <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0.beta.1/">Download this beta release.</a></span></p>
               <div class="news-description">
                 <div class="description">
